<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>ImportApiForm</class>
 <widget class="QWidget" name="ImportApiForm">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>400</width>
    <height>300</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <widget class="QLineEdit" name="nameEdit"/>
   </item>
   <item>
    <widget class="QLineEdit" name="classNameEdit"/>
   </item>
   <item>
    <widget class="QLineEdit" name="pathEdit">
     <property name="readOnly">
      <bool>true</bool>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QPushButton" name="openButton">
     <property name="text">
      <string>Open file</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QPushButton" name="importButton">
     <property name="enabled">
      <bool>false</bool>
     </property>
     <property name="text">
      <string>Import</string>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
